--- a/src/locales/pl-PL.json
+++ b/src/locales/pl-PL.json
@@ -12,5 +12,11 @@
             "message-placeholder": "tekst wiadomości",
             "send": "wyślij"
         }
+    },
+    "home": {
+        "header": "O nas"
+    },
+    "offer": {
+        "header": "Oferta"
     }
 }
